turtleart.lessons.turtleart.Main.DiskFourth.scala.error
Source:4: error: '<-' expected but ')' found.
	for (1 to 90)
                    ^Source:8: error: illegal start of simple expression
}
^