turtleart.lessons.turtleart.Main.DiskFourth.scala.code
override def run() {

	for (1 to 90)
	{
		avance; recule; droite (1)
	}
}
